# align-and-translate

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  tox.ini
.dvc/: config
.github/workflows/: ci.yaml  lint.yaml  tests.yaml  types.yaml
configs/: memory-leak.yaml  paper.yaml  tiny.yaml
data/: .gitignore  files.txt  prepare_data.sh
data/hf-datasets/: .gitignore  wmt14.dvc
requirements/: all.txt  base.txt  dev.txt  py310.txt  py38.txt  py39.txt
scripts/: process_dataset.py  train_tokenizer.py
src/rnnsearch/: __about__.py  __init__.py  __main__.py  cli.py  data.py  datasets.py  nn.py
stubs/: datasets.pyi  sentencepiece.pyi
tests/: test_model.py
