[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "align-and-translate"
version = "0.1.0"
# dependencies = ["torch", "pytorch-lightning~=2.0"]

[project.optional-dependencies]
all = ["align-and-translate[train,dev]"]
train = ["dvc[ssh]", "datasets", "sentencepiece"]
dev = ["ipython", "pre-commit", "align-and-translate[types,pre-commit]"]
test = ["pytest>=6", "align-and-translate[train]"]
types = ["mypy"]
# pre-commit requirements should be syncd with the versions in
# .pre-commit-config.yaml
pre-commit = ["black==23.3.0", "isort==5.12.0", "ruff==0.0.270"]


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "T10"]
extend-exclude = ["env"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"stubs/**/*" = ["D101", "D102", "D103", "D105", "D107"]
"test/**/*" = ["D"]

[tool.mypy]
# start with strict and explicitly relax some conditions
# reasoning for each should be clearly documented
strict = true
show_error_codes = true
install_types = true
non_interactive = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

# I dont really want this option, but for some reason
# without it, static typing for pytorch _completely_ breaks :shrug:
implicit_reexport = true
