[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
dependencies = ["torch", "pytorch-lightning~=2.0", "omegaconf"]
dynamic = ["version"]
name = "align-and-translate"

[project.optional-dependencies]
all = ["align-and-translate[train,dev]"]
dev = ["ipython", "pre-commit", "pip-tools", "align-and-translate[test,types,pre-commit]"]
# pre-commit requirements should be syncd with the versions in
# .pre-commit-config.yaml
pre-commit = ["black==23.3.0", "isort==5.12.0", "ruff==0.0.270"]
test = ["pytest>=6", "coverage", "hypothesis", "align-and-translate[train]"]
train = ["dvc[ssh]<3", "datasets", "sentencepiece", "typer", "tensorboard", "typing_extensions"]
types = [
  "mypy",
  "align-and-translate[test]",
  "types-colorama",
  "types-decorator",
  "types-docutils",
  "types-openpyxl",
  "types-Pillow",
  "types-psutil",
  "types-Pygments",
  "types-pytz",
  "types-pywin32",
  "types-PyYAML",
  "types-regex",
  "types-setuptools",
  "types-six",
  "types-tabulate",
  "types-tqdm",
  "types-typed-ast",
  "lxml-stubs",
  "pandas-stubs"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
# there are untyped functions in pytorch and pytorch_lightning, so not much I
# can do
disallow_untyped_calls = false
# I dont really want this option, but for some reason
# without it, static typing for pytorch _completely_ breaks :shrug:
implicit_reexport = true
install_types = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
non_interactive = true
show_error_codes = true
# start with strict and explicitly relax some conditions
# reasoning for each should be clearly documented
strict = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
minversion = "6.0"
testpaths = [
  "src",
  "tests"
]

[tool.ruff]
extend-exclude = ["env"]
ignore = ["B019", "B905"]
line-length = 88
select = ["D", "E", "F", "T10", "T20", "ARG", "B", "ERA"]

[tool.ruff.per-file-ignores]
"scripts/**/*" = ["T20"]
"stubs/**/*" = ["D101", "D102", "D103", "D105", "D107"]
"tests/**/*" = ["D"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.setuptools.dynamic]
version = {attr = "rnnsearch.__about__.__version__"}
